--- a/webapp/src/components/TopRightMenu/settings/settingsSections/SettingsSection.css
+++ b/webapp/src/components/TopRightMenu/settings/settingsSections/SettingsSection.css
@@ -53,7 +53,7 @@ input[type="range"] {
 /* --- CLOSE ACTION --- */
 
 .close-button {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.5);
   border: none;
   color: white;
   width: 35px;
